--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "winston": "^3.14.2"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.3"
   }
 }
